--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -12,11 +12,10 @@
 <title>Morita S.A</title>
 
 
-<!-- Bootstrap core CSS -->
+
 <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"
 	rel="stylesheet">
 
-<!-- Custom styles for this template -->
 <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 
 </head>
@@ -84,10 +83,8 @@
 	<!-- /.container -->
 
 	<!-- Footer -->
-	<div th:include="usuario/template_usuario.html::footer">
-	</div>
-
-	<!-- Bootstrap core JavaScript -->
+	<div th:include="usuario/template_usuario.html::footer"></div>
+	
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
