--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -3,21 +3,78 @@
 
 <head>
 
-<meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
-<meta name="author" content="">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-<title>Morita S.A</title>
+	<title>Morita S.A</title>
 
 
-<!-- Bootstrap core CSS -->
-<link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"
-	rel="stylesheet">
+	<!-- Bootstrap core CSS -->
+	<link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
-<!-- Custom styles for this template -->
-<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+
+	<style>
+		.container2 {
+			max-width: 500px;
+			margin: auto;
+			border-radius: 8px;
+			padding: 10px;
+		}
+
+		h2 {
+			margin: 70px;
+			text-align: center;
+			color: #333;
+			margin-bottom: 15px;
+		}
+
+		.form-group {
+			margin-bottom: 15px;
+		}
+
+		label {
+			display: block;
+			margin-bottom: 5px;
+			font-weight: bold;
+			color: #333;
+			margin-bottom: 15px;
+		}
+
+		input[type="text"],
+		input[type="email"],
+		input[type="password"] {
+			width: 100%;
+			padding: 10px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
+			margin-bottom: 20px;
+		}
+
+		button {
+			background-color:#326410;
+			color: white;
+			padding: 10px 15px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			width: 100%;
+			transition: background-color 0.3s;
+		}
+
+		button:hover {
+			background-color: #4cc913;
+		}
+
+		footer {
+			margin-top: 5opx;
+
+		}
+	</style>
 
 </head>
 
@@ -29,9 +86,8 @@
 			<a class="navbar-brand" th:href="@{/}">Morita S.A</a>
 
 
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarResponsive" aria-controls="navbarResponsive"
-				aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
@@ -44,46 +100,36 @@
 	</nav>
 
 
-	<!-- Page Content -->
-	<div class="container">
+	<div class="container2">
 
-		<div class="card mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4"></div>
-				<div class="col-md-8">
-					<div class="card-body">
-						<h2>Registro</h2>
+		<h2>Registro</h2>
 
-					</div>
-				</div>
-			</div>
-		</div>
 		<form th:action="@{/usuario/save}" method="post">
 			<div class="form-group">
-				<label for="nombres">Nombres:</label> <input type="text"
-					class="form-control" id="nombre" name="nombre" required
-					placeholder="Ingrese sus nombres" autocomplete="off">
+				<label for="nombre">Nombres:</label>
+				<input type="text" id="nombre" name="nombre" required placeholder="Ingrese sus nombres"
+					autocomplete="off">
 			</div>
 
 			<div class="form-group">
-				<label for="email">Email:</label> <input type="email"
-					class="form-control" id="email" name="email" required
-					placeholder="Ingrese su email" autocomplete="off">
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email" required placeholder="Ingrese su email" autocomplete="off">
 			</div>
 
 			<div class="form-group">
-				<label for="direccion">Dirección:</label> <input type="text"
-					class="form-control" id="direccion" name="direccion" required
-					placeholder="Ingrese su dirección" autocomplete="off">
+				<label for="direccion">Dirección:</label>
+				<input type="text" id="direccion" name="direccion" required placeholder="Ingrese su dirección"
+					autocomplete="off">
 			</div>
 
 			<div class="form-group">
-				<label for="pwd">Contraseña</label> <input type="password"
-					class="form-control" id="password" name="password" required
-					placeholder="Ingrese su contraseña" autocomplete="off">
+				<label for="password">Contraseña:</label>
+				<input type="password" id="password" name="password" required placeholder="Ingrese su contraseña"
+					autocomplete="off">
 			</div>
-			<div class="col-sm-2">
-				<button type="submit" class="btn btn-success">Guardar</button>
+
+			<div class="form-group">
+				<button type="submit">Guardar</button>
 			</div>
 		</form>
 
