--- a/src/main/resources/templates/administrador/detalleorden.html
+++ b/src/main/resources/templates/administrador/detalleorden.html
@@ -56,8 +56,8 @@
     </h1>
 
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-      <li class="breadcrumb-item"><a th:href="@{/usuario/compras}"></li>
+      <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
+      <li class="breadcrumb-item"><a th:href="@{/administrador/compras}"></li>
       <li class="breadcrumb-item active">Detalle de Compra</li>
     </ol>
 
