--- a/src/main/resources/templates/administrador/usuarios.html
+++ b/src/main/resources/templates/administrador/usuarios.html
@@ -89,7 +89,7 @@
     </h1>
 
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
+      <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
       <li class="breadcrumb-item active">Ver Usuarios</li>
     </ol>
 
