--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -58,7 +58,7 @@
 <div th:fragment="header-user">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
+			<a class="navbar-brand" th:href="@{/}">Morita S.A</a>
 
 			<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
 				<input class="form-control mr-sm-2" type="search"
