Feat: home admnin

--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -83,7 +83,7 @@ content="width=device-width, initial-scale=1, shrink-to-fit=no">
                         <p class="card-text" th:text="${producto.nombre}"></p>
                     </div>
                     <div class="card-footer">
-                        <a th:href="@{/productohome/{id}  (id=${producto.id})  }" class="btn">Ver producto</a>
+                        <a th:href="@{/administrador}" class="btn">Ver producto</a>
                     </div>
                 </div>
             </div>
